// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expect \`actions-kit.d.ts\` to be generated 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";

;// external "@actions/core"
const core_namespaceObject = require("@actions/core");
;// ./.vitest-testdirs/vitest-webpack-expect-actions-kit-d-ts-to-be-generated/index.ts

async function run() {
    const type = core_namespaceObject.getInput("type");
    const whoToGreet = core_namespaceObject.getInput("who-to-greet");
    const message = \`Hello \${whoToGreet}!\`;
    core_namespaceObject.info(message);
    if (type === "error") {
        core_namespaceObject.setFailed("This is an error!");
    }
    core_namespaceObject.setOutput("message", message);
}
run().catch((err) => {
    console.error(err);
    core_namespaceObject.setFailed(err.message);
});

/******/ })()
;"
`;

exports[`expect \`actions-kit.d.ts\` to be generated 2`] = `
"// generated by 'actions-kit'
        import "@actions/core";

        

declare module "@actions/core" {

  type InputNames = "type" | "who-to-greet";

  export function getInput(name: InputNames, options?: InputOptions): string;
}
"
`;

exports[`expect \`actions-kit.d.ts\` to include \`ACTION_INPUTS\` 1`] = `
"// generated by 'actions-kit'
        import "@actions/core";

        
declare global {
  export const ACTION_INPUTS: {
  "type": "type",
  "who-to-greet": "who-to-greet"
};
}

declare module "@actions/core" {

  type InputNames = "type" | "who-to-greet";

  export function getInput(name: InputNames, options?: InputOptions): string;
}
"
`;

exports[`expect \`actions-kit.d.ts\` to include \`ACTION_INPUTS\` 2`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";

;// external "@actions/core"
const core_namespaceObject = require("@actions/core");
;// ./.vitest-testdirs/vitest-webpack-expect-actions-kit-d-ts-to-include-ACTION_INPUTS/index.ts
globalThis.ACTION_INPUTS = {
    "type": "type",
    "who-to-greet": "who-to-greet"
};

async function run() {
    const type = core_namespaceObject.getInput("type");
    const whoToGreet = core_namespaceObject.getInput("who-to-greet");
    const message = \`Hello \${whoToGreet}!\`;
    core_namespaceObject.info(message);
    if (type === "error") {
        core_namespaceObject.setFailed("This is an error!");
    }
    core_namespaceObject.setOutput("message", message);
}
run().catch((err) => {
    console.error(err);
    core_namespaceObject.setFailed(err.message);
});
;

/******/ })()
;"
`;
